# kaggle_titanic

./: .gitignore  README.md  pyproject.toml
eda/: eda.ipynb
notes/: dev1_public_score.txt  dev2_public_scores.txt  dev3_public_scores.txt
src/: .gitignore  config.py  encoder.py  mlflow_tracking.py  optimization.py  plotting_utils.py  preprocessing.py  scores.py  train.py  transforms.py
